<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--application name-->
    <string name="app_name">OnTV</string>

    <!--tab name and subtitle-->
    <string name="tab_recent">Recent</string>
    <string name="tab_category">Categories</string>
    <string name="tab_favorite">Favorites</string>

    <!--AdMob Ads-->
        <string name="admob_publisher_id"></string>
        <string name="admob_app_id"></string>
        <string name="admob_banner_unit_id"></string>
        <string name="admob_interstitial_unit_id"></string>

    <!--navigation drawer menu name-->
    <string name="drawer_recent">Recent</string>
    <string name="drawer_category">Categories</string>
    <string name="drawer_favorite">Favorites</string>
    <string name="drawer_rate">Rate</string>
    <string name="drawer_more">Contact Developer</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- play store application link i.e more apps -->
    <string name="play_more_apps">https://google.com</string>
    <string name="privacy_policy_url">https://google.com</string>

    <!--app about information-->
    <string name="about_app_name">Application Name</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_email">Email</string>
    <string name="about_app_copyright">Copyright</string>
    <string name="about_app_rate">Rate</string>
    <string name="about_app_more">Oni</string>
    <string name="about_app_privacy_policy">Privacy Policy</string>
    <string name="sub_about_app_version">2.1.0</string>
    <string name="sub_about_app_email">onihdapp@gmail.com</string>
    <string name="sub_about_app_copyright">App Copyright © 2019–2020 Developer Oni.\nContent found inside this app is a free to use content.</string>
    <string name="sub_about_app_rate">Rate This app on Play Store</string>
    <string name="sub_about_app_more">Contact with me via email</string>

    <!--search-->
    <string name="search">Search</string>
    <string name="search_hint">Search&#8230;</string>

    <!--share-->
    <string name="share">Share</string>
    <string name="share_title">Heii!!</string>
    <string name="share_content">Download this app from this link!!</string>

    <!--network-->
    <string name="failed_text">Failed to Connect Internet!</string>
    <string name="no_internet_text">No Internet Connection!</string>
    <string name="network_required">Required Internet to Streaming the Channel!</string>

    <!--error handling message-->
    <string name="no_category_found">Category Not Found!!</string>
    <string name="no_post_found">We cannot find any data!</string>
    <string name="msg_search_input">Write the right name!</string>
    <string name="msg_oops">Whoops!</string>
    <string name="msg_failed">Failed to load stream, probably the stream server currently down!</string>
    <string name="option_retry">MX PLAYER</string>
    <string name="option_dismis">Dismiss</string>
    <string name="option_read_more">Read More</string>
    <string name="option_ok">OK</string>
    <string name="option_no">Mbyll</string>

    <!--favorite-->
    <string name="favorite_added">Added to Favorites!</string>
    <string name="favorite_removed">Removed from Favorites!</string>
    <string name="no_favorite_found">You do not have favorite channels</string>

    <!--close message-->
    <string name="press_again_to_exit">Press again to Exit</string>

    <!--player message-->
    <string name="msg_notinstalled">Whoops!</string>
    <string name="no">No</string>

    <!--Bllokim i Packet Capturave-->
    <string name="MosVidh">We Detected a url sniffer in your devlice.\nPlease unistall it!\nThis content is not ours and we can not let you steal it.</string>
    <string name="option_mbyll">Exit</string>
    <string name="mx_msg">Something Went Wrong With The Channel, Please Try Later.</string>
    <string name="mx_title">Sorry!</string>
    <string name="po">Yes</string>
    <string name="jo">No</string>

</resources>
